--- a/index.html
+++ b/index.html
@@ -11,6 +11,213 @@
 
 <body>
 	<div class="wrapper">
+		<!-- contact us  -->
+		<div class="contact-us">
+			<div class="contact-cal">
+				<a href="#!">
+					<img src="./images/log/contact-icon.svg" alt="contact-cal">
+				</a>
+			</div>
+			<div class="contact-sms">
+				<a href="#!">
+					<img src="./images/log/contact-sms.svg" alt="contact-sms">
+				</a>
+			</div>
+		</div>
+		<!-- contact us  -->
+
+		<!-- Header seris start -->
+		<header id="header">
+			<div class="container">
+				<div class="row">
+					<div class="header-fluid col-lg-12">
+						<div class="header-log">
+							<img src="./images/header-name.png" alt="header-log">
+						</div>
+						<nav class="header-nav">
+							<ul class="header-items">
+								<li class="header-item">
+									<a href="#!">Главная</a>
+								</li>
+								<li class="header-item">
+									<a href="#!">Каталог</a>
+								</li>
+								<li class="header-item">
+									<a href="#!">Контакты</a>
+								</li>
+							</ul>
+						</nav>
+						<div class="header-log__info">
+							<div class="header-info__email">
+								<a href="tell:+7 (800) 511-34-88" class="header-numer">+ 7 (800) 511-34-88</a>
+								<a href="!#" class="header-email">sib.preforma@bk.ru</a>
+							</div>
+							<div class="header-social-medya">
+								<a href="#!" class="social-medya__vr"><img src="./images/log/header-Vector.svg"
+										alt="header-vr"></a>
+								<a href="#!" class="social-medya__tg"><img src="./images/log/header-telegram.svg"
+										alt="header-tg"></a>
+								<a href="#!" class="social-medya__ins"><img src="./images/log/header-instagram.svg"
+										alt="header-ins"></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</header>
+		<!-- Header seris end -->
+
+		<!-- Preform seris start-->
+		<section is="preform">
+			<div class="preform-wrap">
+				<div class="container">
+					<div class="row">
+						<div class="preform-fluid col-lg-12">
+							<div class="preform-fluid__title">
+								<h1><span>ПЭТ</span> преформы</h1>
+								<h2>Производство и продажа оптом с доставкой по всей России</h2>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Preform seris end-->
+
+		<!-- Company seris start -->
+		<section id="company">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<h2 class="company-title adaptation">О КОМПАНИИ</h2>
+					</div>
+					<div class="col-lg-6 company-border">
+						<div class="company-info">
+							<h3>Мы, компания <span>«Сибпреформа»</span>, специализируемся на производстве и продаже
+								высококачественных пэт преформ и колпачков.</h3>
+						</div>
+					</div>
+					<div class="col-lg-6 company-border">
+						<div class="company-info">
+							<h3>Наш широкий ассортимент товаров позволяет нашим клиентам выбрать идеальный формат,
+								соответствующий их потребностям — будь то упаковка для минеральной воды или бытовой
+								химии.</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Company seris end -->
+
+		<!-- Product seris start -->
+		<section id="product">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="product-title adaptation">
+							<h2>Наша продукция</h2>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="product-wrap">
+							<div class="product-wrap__title">
+								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
+							</div>
+							<div class="product-wrap__img">
+								<img src="./images/product-1.png" alt="product-img">
+							</div>
+							<div class="product-wrap__cost">
+								<h5>от 3,65 руб/шт*</h5>
+							</div>
+							<div class="product-wrap__btn">
+								<button>ПЕРЕЙТИ К ТОВАРУ</button>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="product-wrap">
+							<div class="product-wrap__title">
+								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
+							</div>
+							<div class="product-wrap__img">
+								<img src="./images/product-1.png" alt="product-img">
+							</div>
+							<div class="product-wrap__cost">
+								<h5>от 3,65 руб/шт*</h5>
+							</div>
+							<div class="product-wrap__btn">
+								<button>ПЕРЕЙТИ К ТОВАРУ</button>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="product-wrap">
+							<div class="product-wrap__title">
+								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
+							</div>
+							<div class="product-wrap__img">
+								<img src="./images/product-1.png" alt="product-img">
+							</div>
+							<div class="product-wrap__cost">
+								<h5>от 3,65 руб/шт*</h5>
+							</div>
+							<div class="product-wrap__btn">
+								<button>ПЕРЕЙТИ К ТОВАРУ</button>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 mt-4">
+						<div class="product-wrap">
+							<div class="product-wrap__title">
+								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
+							</div>
+							<div class="product-wrap__img">
+								<img src="./images/product-1.png" alt="product-img">
+							</div>
+							<div class="product-wrap__cost">
+								<h5>от 3,65 руб/шт*</h5>
+							</div>
+							<div class="product-wrap__btn">
+								<button>ПЕРЕЙТИ К ТОВАРУ</button>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 mt-4">
+						<div class="product-wrap">
+							<div class="product-wrap__title">
+								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
+							</div>
+							<div class="product-wrap__img">
+								<img src="./images/product-1.png" alt="product-img">
+							</div>
+							<div class="product-wrap__cost">
+								<h5>от 3,65 руб/шт*</h5>
+							</div>
+							<div class="product-wrap__btn">
+								<button>ПЕРЕЙТИ К ТОВАРУ</button>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 mt-4">
+						<div class="product-wrap">
+							<div class="product-wrap__title">
+								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
+							</div>
+							<div class="product-wrap__img">
+								<img src="./images/product-1.png" alt="product-img">
+							</div>
+							<div class="product-wrap__cost">
+								<h5>от 3,65 руб/шт*</h5>
+							</div>
+							<div class="product-wrap__btn">
+								<button>ПЕРЕЙТИ К ТОВАРУ</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Product seris start -->
 
 
 
