header section finish

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <body>
 	<div class="wrapper">
-		<!-- contact us  -->
-		<div class="contact-us">
-			<div class="contact-cal">
+		<!-- call-us  -->
+		<div class="call-us">
+			<div class="call-number">
 				<a href="#!">
 					<img src="./images/log/contact-icon.svg" alt="contact-cal">
 				</a>
 			</div>
-			<div class="contact-sms">
+			<div class="call-sms">
 				<a href="#!">
 					<img src="./images/log/contact-sms.svg" alt="contact-sms">
 				</a>
@@ -172,7 +172,7 @@
 								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
 							</div>
 							<div class="product-wrap__img">
-								<img src="./images/product-1.png" alt="product-img">
+								<img src="./images/product-7.png" alt="product-img">
 							</div>
 							<div class="product-wrap__cost">
 								<h5>от 3,65 руб/шт*</h5>
@@ -188,7 +188,7 @@
 								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
 							</div>
 							<div class="product-wrap__img">
-								<img src="./images/product-1.png" alt="product-img">
+								<img src="./images/product-8.png" alt="product-img">
 							</div>
 							<div class="product-wrap__cost">
 								<h5>от 3,65 руб/шт*</h5>
@@ -204,20 +204,146 @@
 								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
 							</div>
 							<div class="product-wrap__img">
-								<img src="./images/product-1.png" alt="product-img">
+								<img src="./images/product-9.png" alt="product-img">
 							</div>
 							<div class="product-wrap__cost">
 								<h5>от 3,65 руб/шт*</h5>
 							</div>
 							<div class="product-wrap__btn">
 								<button>ПЕРЕЙТИ К ТОВАРУ</button>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 mt-4">
+						<div class="product-wrap">
+							<div class="product-wrap__title">
+								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
+							</div>
+							<div class="product-wrap__img">
+								<img src="./images/producy10.png" alt="product-img">
+							</div>
+							<div class="product-wrap__cost">
+								<h5>от 3,65 руб/шт*</h5>
+							</div>
+							<div class="product-wrap__btn">
+								<button>ПЕРЕЙТИ К ТОВАРУ</button>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-8 mt-4">
+						<div class="product-wrap">
+							<div class="product-wrap__title">
+								<h3>УЗНАЙТЕ, КАКАЯ ПЭТ ПРЕФОРМА ПОДХОДИТ ИМЕННО ВАМ</h3>
+							</div>
+							<div class="product-wrap__img">
+								<img src="./images/product-11.png" alt="product-img">
+							</div>
+							<div class="product-wrap__cost">
+								<h5>Ответьте на несколько простых вопросов и узнайте стоимость продукции</h5>
+							</div>
+							<div class="product-btn__bik">
+								<button>Подобрать преформу</button>
+							</div>
+						</div>
+					</div>
+					<div class="product-cards__info">
+						<h4>*-цены устанавливаются индивидуально, в зависимости от объема закупки</h4>
+					</div>
+				</div>
+				<div class="product-catalog__transition">
+					<button>ПЕРЕЙТИ В КАТАЛОГ</button>
+				</div>
+			</div>
+		</section>
+		<!-- Product seris start -->
+
+		<!-- contact us seris start -->
+		<section id="contact-us">
+			<div class="container">
+				<div class="contact-fluid">
+					<div class="row d-flex">
+						<div class="col-lg-12">
+							<div class="contact-fluid__title">
+								<h2>Оставьте заявку на получение образцов</h2>
+								<h4>Максимальное количество образцов одного вида -20 штук </h4>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<label class="contact-lavel__name">
+								<input type="text" id="name" placeholder="Имя*">
+								<label for="name"></label>
+							</label>
+						</div>
+						<div class="col-lg-4">
+							<label class="contact-lavel__cal">
+								<input type="number" id="name" placeholder="Телефон*">
+								<label for="name"></label>
+							</label>
+						</div>
+						<div class="col-lg-4">
+							<label class="contact-lavel__email">
+								<input type="email" id="name" placeholder="E-Mail*">
+								<label for="name"></label>
+							</label>
+						</div>
+						<div class="col-lg-12">
+							<div class="contact-fluid__btn">
+								<button>ОТПРАВИТЬ ЗАЯВКУ</button>
+							</div>
+						</div>
+						<div class="col-lg-12">
+							<div class="contact-consent">
+								<h4>Нажимая на кнопку, Вы даете согласие на обработку своих персональных данных.</h4>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<!-- Product seris start -->
+		<!-- contact us seris end -->
+
+
+
+
+
+
+
+
+
+
+
+		<!-- Footer seris start -->
+		<footer id="footer">
+			<div class="container">
+				<div class="row">
+					<div class="footer-fluid col-lg-12">
+						<div class="footer-log">
+							<img src="./images/header-name.png" alt="footer-log">
+						</div>
+						<nav class="footer-nav">
+							<ul class="footer-items">
+								<li class="footer-item">
+									<a href="#!">Главная</a>
+								</li>
+								<li class="footer-item">
+									<a href="#!">Каталог</a>
+								</li>
+								<li class="footer-item">
+									<a href="#!">Контакты</a>
+								</li>
+							</ul>
+						</nav>
+						<div class="footer-social-medya">
+							<a href="#!" class="social-medya__tg"><img src="./images/log/footer-telegram.svg"
+									alt="footer-tg"></a>
+							<a href="#!" class="social-medya__ins"><img src="./images/log/footer-instagram.svg"
+									alt="footer-ins"></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
+		<!-- Footer seris end -->
 
 
 
