--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
 	<div class="wrapper">
+
+
 		<!-- call-us  -->
 		<div class="call-us">
 			<div class="call-number">
@@ -24,7 +26,7 @@
 				</a>
 			</div>
 		</div>
-		<!-- contact us  -->
+		<!-- call-us  -->
 
 		<!-- Header seris start -->
 		<header id="header">
@@ -53,12 +55,9 @@
 								<a href="!#" class="header-email">sib.preforma@bk.ru</a>
 							</div>
 							<div class="header-social-medya">
-								<a href="#!" class="social-medya__vr"><img src="./images/log/header-Vector.svg"
-										alt="header-vr"></a>
-								<a href="#!" class="social-medya__tg"><img src="./images/log/header-telegram.svg"
-										alt="header-tg"></a>
-								<a href="#!" class="social-medya__ins"><img src="./images/log/header-instagram.svg"
-										alt="header-ins"></a>
+								<a href="#!" class="social-medya__vr"><img src="./images/log/header-Vector.svg" alt="header-vr"></a>
+								<a href="#!" class="social-medya__tg"><img src="./images/log/header-telegram.svg" alt="header-tg"></a>
+								<a href="#!" class="social-medya__ins"><img src="./images/log/header-instagram.svg" alt="header-ins"></a>
 							</div>
 						</div>
 					</div>
@@ -93,15 +92,12 @@
 					</div>
 					<div class="col-lg-6 company-border">
 						<div class="company-info">
-							<h3>Мы, компания <span>«Сибпреформа»</span>, специализируемся на производстве и продаже
-								высококачественных пэт преформ и колпачков.</h3>
+							<h3>Мы, компания <span>«Сибпреформа»</span>, специализируемся на производстве и продаже высококачественных пэт преформ и колпачков.</h3>
 						</div>
 					</div>
 					<div class="col-lg-6 company-border">
 						<div class="company-info">
-							<h3>Наш широкий ассортимент товаров позволяет нашим клиентам выбрать идеальный формат,
-								соответствующий их потребностям — будь то упаковка для минеральной воды или бытовой
-								химии.</h3>
+							<h3>Наш широкий ассортимент товаров позволяет нашим клиентам выбрать идеальный формат, соответствующий их потребностям — будь то упаковка для минеральной воды или бытовой химии.</h3>
 						</div>
 					</div>
 				</div>
@@ -246,53 +242,53 @@
 							</div>
 						</div>
 					</div>
-					<div class="product-cards__info">
+					<div class="product-cards__info col-lg-12">
 						<h4>*-цены устанавливаются индивидуально, в зависимости от объема закупки</h4>
 					</div>
 				</div>
-				<div class="product-catalog__transition">
+				<div class="product-catalog__transition ">
 					<button>ПЕРЕЙТИ В КАТАЛОГ</button>
 				</div>
 			</div>
 		</section>
 		<!-- Product seris start -->
 
-		<!-- contact us seris start -->
-		<section id="contact-us">
+		<!-- questionnaire seris start -->
+		<section id="questionnaire-us">
 			<div class="container">
-				<div class="contact-fluid">
+				<div class="questionnaire-fluid">
 					<div class="row d-flex">
 						<div class="col-lg-12">
-							<div class="contact-fluid__title">
+							<div class="questionnaire-fluid__title">
 								<h2>Оставьте заявку на получение образцов</h2>
 								<h4>Максимальное количество образцов одного вида -20 штук </h4>
 							</div>
 						</div>
 						<div class="col-lg-4">
-							<label class="contact-lavel__name">
+							<label class="questionnaire-lavel__name">
 								<input type="text" id="name" placeholder="Имя*">
 								<label for="name"></label>
 							</label>
 						</div>
 						<div class="col-lg-4">
-							<label class="contact-lavel__cal">
+							<label class="questionnaire-lavel__cal">
 								<input type="number" id="name" placeholder="Телефон*">
 								<label for="name"></label>
 							</label>
 						</div>
 						<div class="col-lg-4">
-							<label class="contact-lavel__email">
+							<label class="questionnaire-lavel__email">
 								<input type="email" id="name" placeholder="E-Mail*">
 								<label for="name"></label>
 							</label>
 						</div>
 						<div class="col-lg-12">
-							<div class="contact-fluid__btn">
+							<div class="questionnaire-fluid__btn">
 								<button>ОТПРАВИТЬ ЗАЯВКУ</button>
 							</div>
 						</div>
 						<div class="col-lg-12">
-							<div class="contact-consent">
+							<div class="questionnaire-consent">
 								<h4>Нажимая на кнопку, Вы даете согласие на обработку своих персональных данных.</h4>
 							</div>
 						</div>
@@ -300,26 +296,84 @@
 				</div>
 			</div>
 		</section>
-		<!-- contact us seris end -->
+		<!-- questionnaire seris end -->
 
+		<!-- videos seris start -->
+		<section id="videos">
+			<div class="container">
+				<div class="videos-fluid">
+					<div class="videos-fluid__title">
+						<h2>Процесс изготовления ПЭТ преформ</h2>
+					</div>
+					<div class="videos-fluid__play">
+						<a href="#!">
+							<img src="./images/videos.png" alt="videps-img">
+						</a>
+						<div class="videos-fluid__icon">
+							<img class="videos-play" src="./images/log/videos 1.svg" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- videos seris end -->
 
-
-
-
-
-
-
-
-
+		<!-- Contact seris start -->
+		<section id="contact">
+			<div class="container">
+				<div class="contact-fluid">
+					<div class="contact-fluid__title">
+						<h2>КОНТАКТЫ</h2>
+					</div>
+					<div class="contact-fluid__map">
+						<div class="contact-map"><iframe src="https://yandex.uz/map-widget/v1/profile?ll=37.385534%2C55.584227&z=9.5" width="1200px" height="630px" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+						<div class="contact-office-info">
+							<div class="contact-office__title">
+								<h3>Офис:</h3>
+							</div>
+							<div class="contact-office__novosibirsk">
+								<h4>г. Новосибирск, ул. Богдана Хмельницкого 1, офис 100.</h4>
+							</div>
+							<div class="contact-office__cal">
+								<h4>Тел. +7 (383) 209-64-04</h4>
+								<h4>+7 (961) 215-63-10</h4>
+							</div>
+							<div class="contact-office__email">
+								<h4>Отдел по продаже преформ: sib.preforma@bk.ru</h4>
+							</div>
+						</div>
+						<div class="contact-fluid__loc">
+							<img src="./images/loc.png" alt="contact-loc">
+						</div>
+					</div>
+					<div class="production-fluid__map mt-5">
+						<div class="production-map"><iframe src="https://yandex.uz/map-widget/v1/profile?ll=37.385534%2C55.584227&z=9.5" width="1200px" height="630px" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+						<div class="production-office-info">
+							<div class="production-office__title">
+								<h3>Производство:</h3>
+							</div>
+							<div class="production-office__email">
+								<h4>Новосибирская область, Мичуринский район, проезд Автомобилистов 12.</h4>
+							</div>
+						</div>
+						<div class="production-fluid__loc">
+							<img src="./images/loc.png" alt="contact-loc">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Contact seris end -->
 
 		<!-- Footer seris start -->
+
 		<footer id="footer">
 			<div class="container">
-				<div class="row">
-					<div class="footer-fluid col-lg-12">
-						<div class="footer-log">
-							<img src="./images/header-name.png" alt="footer-log">
-						</div>
+				<div class="row footer-fluid__top">
+					<div class="footer-log__office col-lg-4">
+						<img src="./images/header-name.png" alt="footer-log">
+					</div>
+					<div class="footer-fluid__production col-lg-4">
 						<nav class="footer-nav">
 							<ul class="footer-items">
 								<li class="footer-item">
@@ -333,22 +387,43 @@
 								</li>
 							</ul>
 						</nav>
+					</div>
+					<div class="footer-fluid__contact col-lg-3 offset-lg-1">
 						<div class="footer-social-medya">
-							<a href="#!" class="social-medya__tg"><img src="./images/log/footer-telegram.svg"
-									alt="footer-tg"></a>
-							<a href="#!" class="social-medya__ins"><img src="./images/log/footer-instagram.svg"
-									alt="footer-ins"></a>
+							<a href="#!" class="social-medya__vr"><img src="./images/log/header-Vector.svg"	alt="footer-ins"></a>
+							<a href="#!" class="social-medya__tg"><img src="./images/log/header-telegram.svg"	alt="footer-tg"></a>
 						</div>
 					</div>
+				</div>
+				<div class="row footer-fluid__down">
+					<div class="footer-log__info col-lg-4">
+						<h3 class="footer-info__title ft-adaptation-title">Офис</h3>
+						<p class="footer-info__text ft-adaptation-text">г. Новосибирск, ул. Богдана Хмельницкого 1, офис 100.</p>
+					</div>
+					<div class="footer-production__address col-lg-4">
+						<h3 class="footer-address__title ft-adaptation-title">Производство</h3>
+						<p class="footer-address__text ft-adaptation-text">Новосибирская область, Мичуринский район, проезд Автомобилистов 12.</p>
+					</div>
+					<div class="footer-contact__cal col-lg-3 offset-lg-1">
+						<h3 class="ft-adaptation__title ft-adaptation-title">Контакты</h3>
+						<div class="footer-fluid__numbers">
+							<a href="tell:+">+ 7 (800) 511-34-88</a>
+							<a href="tell:+">+7 (383) 209-64-04</a>
+							<a href="tell:+">+7 (961) 215-63-10</a>
+						</div>
+						<p class="ft-adaptation-text">Отдел по продаже преформ: sib.preforma@bk.ru</p>
+					</div>
+				</div>
+				<div class="footer-sibpreforma">
+					<p class="footer-sibpreforma__text">© Сибпреформа.рф. Все права защищены.</p>
 				</div>
 			</div>
 		</footer>
 		<!-- Footer seris end -->
 
 
-
 	</div>
-
+        <!-- JS -->
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="libs/bootstrap4/bootstrap.min.js"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
