--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
-<link rel="stylesheet" type="text/css" href="libs/bootstrap4/bootstrap.min.css" media="screen">
+<link rel="stylesheet" type="text/css" href="libs/bootstrap5/bootstrap.min.css" media="screen">
 <link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- <meta name="viewport" content="width=480"> -->
@@ -366,10 +366,9 @@
 		<!-- Contact seris end -->
 
 		<!-- Footer seris start -->
-
 		<footer id="footer">
 			<div class="container">
-				<div class="row footer-fluid__top">
+				<div class="row footer-fluid__top pt-4">
 					<div class="footer-log__office col-lg-4">
 						<img src="./images/header-name.png" alt="footer-log">
 					</div>
@@ -423,9 +422,10 @@
 
 
 	</div>
+	
         <!-- JS -->
 	<script src="js/jquery-3.5.1.min.js"></script>
-	<script src="libs/bootstrap4/bootstrap.min.js"></script>
+	<script src="libs/bootstrap5/bootstrap.min.js"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
