--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<!-- call-us  -->
 
 		<!-- Header seris start -->
+		<!-- Header seris start -->
 		<header id="header">
 			<div class="container">
 				<div class="row">
@@ -37,14 +38,17 @@
 							<img src="./images/header-name.png" alt="header-log">
 						</div>
 						<nav class="header-nav">
+							<div class="header-close">
+								<img src="./images/log/close.svg" alt="">
+							</div>
 							<ul class="header-items">
-								<li class="header-item">
+								<li class="header-item nav_item">
 									<a href="#!">Главная</a>
 								</li>
-								<li class="header-item">
+								<li class="header-item nav_item">
 									<a href="#!">Каталог</a>
 								</li>
-								<li class="header-item">
+								<li class="header-item nav_item">
 									<a href="#!">Контакты</a>
 								</li>
 							</ul>
@@ -55,15 +59,22 @@
 								<a href="!#" class="header-email">sib.preforma@bk.ru</a>
 							</div>
 							<div class="header-social-medya">
-								<a href="#!" class="social-medya__vr"><img src="./images/log/header-Vector.svg" alt="header-vr"></a>
-								<a href="#!" class="social-medya__tg"><img src="./images/log/header-telegram.svg" alt="header-tg"></a>
-								<a href="#!" class="social-medya__ins"><img src="./images/log/header-instagram.svg" alt="header-ins"></a>
+								<a href="#!" class="social-medya__vr"><img src="./images/log/header-Vector.svg"
+										alt="header-vr"></a>
+								<a href="#!" class="social-medya__tg"><img src="./images/log/header-telegram.svg"
+										alt="header-tg"></a>
+								<a href="#!" class="social-medya__ins"><img src="./images/log/header-instagram.svg"
+										alt="header-ins"></a>
 							</div>
+						</div>
+						<div class="header-bars ">
+							<img src="./images/log/bars.svg" alt="">
 						</div>
 					</div>
 				</div>
 			</div>
 		</header>
+		<!-- Header seris end -->
 		<!-- Header seris end -->
 
 		<!-- Preform seris start-->
@@ -71,7 +82,7 @@
 			<div class="preform-wrap">
 				<div class="container">
 					<div class="row">
-						<div class="preform-fluid col-lg-12">
+						<div class="preform-fluid col-lg-12 ">
 							<div class="preform-fluid__title">
 								<h1><span>ПЭТ</span> преформы</h1>
 								<h2>Производство и продажа оптом с доставкой по всей России</h2>
@@ -92,12 +103,15 @@
 					</div>
 					<div class="col-lg-6 company-border">
 						<div class="company-info">
-							<h3>Мы, компания <span>«Сибпреформа»</span>, специализируемся на производстве и продаже высококачественных пэт преформ и колпачков.</h3>
+							<h3>Мы, компания <span>«Сибпреформа»</span>, специализируемся на производстве и продаже
+								высококачественных пэт преформ и колпачков.</h3>
 						</div>
 					</div>
-					<div class="col-lg-6 company-border">
+					<div class="col-lg-6 company-border ">
 						<div class="company-info">
-							<h3>Наш широкий ассортимент товаров позволяет нашим клиентам выбрать идеальный формат, соответствующий их потребностям — будь то упаковка для минеральной воды или бытовой химии.</h3>
+							<h3>Наш широкий ассортимент товаров позволяет нашим клиентам выбрать идеальный формат,
+								соответствующий их потребностям — будь то упаковка для минеральной воды или бытовой
+								химии.</h3>
 						</div>
 					</div>
 				</div>
@@ -114,7 +128,7 @@
 							<h2>Наша продукция</h2>
 						</div>
 					</div>
-					<div class="col-lg-4">
+					<div class="col-lg-4 col-md-6">
 						<div class="product-wrap">
 							<div class="product-wrap__title">
 								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
@@ -130,7 +144,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4">
+					<div class="col-lg-4 col-md-6">
 						<div class="product-wrap">
 							<div class="product-wrap__title">
 								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
@@ -146,7 +160,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4">
+					<div class="col-lg-4 col-md-6 ma-top">
 						<div class="product-wrap">
 							<div class="product-wrap__title">
 								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
@@ -162,7 +176,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 mt-4">
+					<div class="col-lg-4 col-md-6 mt-4">
 						<div class="product-wrap">
 							<div class="product-wrap__title">
 								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
@@ -178,7 +192,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 mt-4">
+					<div class="col-lg-4 col-md-6 mt-4">
 						<div class="product-wrap">
 							<div class="product-wrap__title">
 								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
@@ -194,7 +208,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 mt-4">
+					<div class="col-lg-4 col-md-6 mt-4">
 						<div class="product-wrap">
 							<div class="product-wrap__title">
 								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
@@ -210,7 +224,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 mt-4">
+					<div class="col-lg-4 col-md-6 mt-4">
 						<div class="product-wrap">
 							<div class="product-wrap__title">
 								<h3>Стандарт 1810 BPF/PCO 28 мм</h3>
@@ -226,13 +240,13 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-8 mt-4">
+					<div class="col-lg-8 col-md-12  mt-4">
 						<div class="product-wrap">
 							<div class="product-wrap__title">
 								<h3>УЗНАЙТЕ, КАКАЯ ПЭТ ПРЕФОРМА ПОДХОДИТ ИМЕННО ВАМ</h3>
 							</div>
 							<div class="product-wrap__img">
-								<img src="./images/product-11.png" alt="product-img">
+								<img class="product-picture" src="./images/product-11.png" alt="product-img">
 							</div>
 							<div class="product-wrap__cost">
 								<h5>Ответьте на несколько простых вопросов и узнайте стоимость продукции</h5>
@@ -264,20 +278,20 @@
 								<h4>Максимальное количество образцов одного вида -20 штук </h4>
 							</div>
 						</div>
-						<div class="col-lg-4">
-							<label class="questionnaire-lavel__name">
+						<div class="col-xl-4 flex-wrap">
+							<label class="questionnaire-lavel__name lable-w">
 								<input type="text" id="name" placeholder="Имя*">
 								<label for="name"></label>
 							</label>
 						</div>
-						<div class="col-lg-4">
-							<label class="questionnaire-lavel__cal">
+						<div class="col-xl-4 flex-wrap">
+							<label class="questionnaire-lavel__cal lable-w">
 								<input type="number" id="name" placeholder="Телефон*">
 								<label for="name"></label>
 							</label>
 						</div>
-						<div class="col-lg-4">
-							<label class="questionnaire-lavel__email">
+						<div class="col-xl-4 flex-wrap">
+							<label class="questionnaire-lavel__email lable-w">
 								<input type="email" id="name" placeholder="E-Mail*">
 								<label for="name"></label>
 							</label>
@@ -307,7 +321,7 @@
 					</div>
 					<div class="videos-fluid__play">
 						<a href="#!">
-							<img src="./images/videos.png" alt="videps-img">
+							<img class="videos-img" src="./images/videos.png" alt="videps-img">
 						</a>
 						<div class="videos-fluid__icon">
 							<img class="videos-play" src="./images/log/videos 1.svg" alt="">
@@ -318,6 +332,7 @@
 		</section>
 		<!-- videos seris end -->
 
+
 		<!-- Contact seris start -->
 		<section id="contact">
 			<div class="container">
@@ -326,7 +341,10 @@
 						<h2>КОНТАКТЫ</h2>
 					</div>
 					<div class="contact-fluid__map">
-						<div class="contact-map"><iframe src="https://yandex.uz/map-widget/v1/profile?ll=37.385534%2C55.584227&z=9.5" width="1200px" height="630px" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+						<div class="contact-map"><iframe
+								src="https://yandex.uz/map-widget/v1/profile?ll=37.385534%2C55.584227&z=9.5"
+								width="1200px" height="630px" frameborder="1" allowfullscreen="true"
+								style="position:relative;"></iframe></div>
 						<div class="contact-office-info">
 							<div class="contact-office__title">
 								<h3>Офис:</h3>
@@ -347,7 +365,10 @@
 						</div>
 					</div>
 					<div class="production-fluid__map mt-5">
-						<div class="production-map"><iframe src="https://yandex.uz/map-widget/v1/profile?ll=37.385534%2C55.584227&z=9.5" width="1200px" height="630px" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+						<div class="production-map"><iframe
+								src="https://yandex.uz/map-widget/v1/profile?ll=37.385534%2C55.584227&z=9.5"
+								width="1200px" height="630px" frameborder="1" allowfullscreen="true"
+								style="position:relative;"></iframe></div>
 						<div class="production-office-info">
 							<div class="production-office__title">
 								<h3>Производство:</h3>
@@ -389,19 +410,23 @@
 					</div>
 					<div class="footer-fluid__contact col-lg-3 offset-lg-1">
 						<div class="footer-social-medya">
-							<a href="#!" class="social-medya__vr"><img src="./images/log/header-Vector.svg"	alt="footer-ins"></a>
-							<a href="#!" class="social-medya__tg"><img src="./images/log/header-telegram.svg"	alt="footer-tg"></a>
+							<a href="#!" class="social-medya__vr"><img src="./images/log/header-Vector.svg"
+									alt="footer-ins"></a>
+							<a href="#!" class="social-medya__tg"><img src="./images/log/header-telegram.svg"
+									alt="footer-tg"></a>
 						</div>
 					</div>
 				</div>
 				<div class="row footer-fluid__down">
 					<div class="footer-log__info col-lg-4">
 						<h3 class="footer-info__title ft-adaptation-title">Офис</h3>
-						<p class="footer-info__text ft-adaptation-text">г. Новосибирск, ул. Богдана Хмельницкого 1, офис 100.</p>
+						<p class="footer-info__text ft-adaptation-text">г. Новосибирск, ул. Богдана Хмельницкого 1, офис
+							100.</p>
 					</div>
 					<div class="footer-production__address col-lg-4">
 						<h3 class="footer-address__title ft-adaptation-title">Производство</h3>
-						<p class="footer-address__text ft-adaptation-text">Новосибирская область, Мичуринский район, проезд Автомобилистов 12.</p>
+						<p class="footer-address__text ft-adaptation-text">Новосибирская область, Мичуринский район,
+							проезд Автомобилистов 12.</p>
 					</div>
 					<div class="footer-contact__cal col-lg-3 offset-lg-1">
 						<h3 class="ft-adaptation__title ft-adaptation-title">Контакты</h3>
@@ -422,8 +447,8 @@
 
 
 	</div>
-	
-        <!-- JS -->
+
+	<!-- JS -->
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="libs/bootstrap5/bootstrap.min.js"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
